--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Sergio Zúñiga Fraga</a>.
+    Coded by <a href="https://github.com/SergioZF09">Sergio Zúñiga Fraga</a>.
   </div>
 </body>
 </html>
